navbar media fixing gap

--- a/src/index.css
+++ b/src/index.css
@@ -630,6 +630,8 @@ input:focus {
   .navbar {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
     align-items: center;
     width: 100%;
     overflow: hidden;
